tests/baselines/reference/privacyTopLevelAmbientExternalModuleImportWithoutExport.errors.txt
==== tests/cases/compiler/privacyTopLevelAmbientExternalModuleImportWithoutExport_core.ts (8 errors) ====
    // Privacy errors - importing private elements
    import im_private_mi_private = require("m");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! privacyTopLevelAmbientExternalModuleImportWithoutExport_core.ts(2,1): error TS2071: Unable to resolve external module '"m"'.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! privacyTopLevelAmbientExternalModuleImportWithoutExport_core.ts(2,1): error TS2072: Module cannot be aliased to a non-module type.
    import im_private_mu_private = require("m2");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! privacyTopLevelAmbientExternalModuleImportWithoutExport_core.ts(3,1): error TS2071: Unable to resolve external module '"m2"'.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! privacyTopLevelAmbientExternalModuleImportWithoutExport_core.ts(3,1): error TS2072: Module cannot be aliased to a non-module type.
    import im_private_mi_public = require("privacyTopLevelAmbientExternalModuleImportWithoutExport_require");
    import im_private_mu_public = require("privacyTopLevelAmbientExternalModuleImportWithoutExport_require1");
    
    // Usage of privacy error imports
    var privateUse_im_private_mi_private = new im_private_mi_private.c_private();
                                               ~~~~~~~~~~~~~~~~~~~~~
!!! privacyTopLevelAmbientExternalModuleImportWithoutExport_core.ts(8,44): error TS2095: Could not find symbol 'im_private_mi_private'.
    export var publicUse_im_private_mi_private = new im_private_mi_private.c_private();
                                                     ~~~~~~~~~~~~~~~~~~~~~
!!! privacyTopLevelAmbientExternalModuleImportWithoutExport_core.ts(9,50): error TS2095: Could not find symbol 'im_private_mi_private'.
    var privateUse_im_private_mu_private = new im_private_mu_private.c_private();
                                               ~~~~~~~~~~~~~~~~~~~~~
!!! privacyTopLevelAmbientExternalModuleImportWithoutExport_core.ts(10,44): error TS2095: Could not find symbol 'im_private_mu_private'.
    export var publicUse_im_private_mu_private = new im_private_mu_private.c_private();
                                                     ~~~~~~~~~~~~~~~~~~~~~
!!! privacyTopLevelAmbientExternalModuleImportWithoutExport_core.ts(11,50): error TS2095: Could not find symbol 'im_private_mu_private'.
    var privateUse_im_private_mi_public = new im_private_mi_public.c_public();
    export var publicUse_im_private_mi_public = new im_private_mi_public.c_public();
    var privateUse_im_private_mi_public = new im_private_mi_public.c_public();
    export var publicUse_im_private_mi_public = new im_private_mi_public.c_public();
    
==== tests/cases/compiler/privacyTopLevelAmbientExternalModuleImportWithoutExport_require.ts (0 errors) ====
    
    // Public elements
    export class c_public {
        foo: string;
    }
    
==== tests/cases/compiler/privacyTopLevelAmbientExternalModuleImportWithoutExport_require1.ts (0 errors) ====
    export class c_public {
        bar: string;
    }
    
==== tests/cases/compiler/privacyTopLevelAmbientExternalModuleImportWithoutExport_require2.ts (0 errors) ====
    // private elements
    // Export - Error ambient modules allowed only in global
    declare module 'm' {
        export class c_private {
            baz: string
        }   
    }
    
==== tests/cases/compiler/privacyTopLevelAmbientExternalModuleImportWithoutExport_require3.ts (0 errors) ====
    declare module 'm2' {
        export class c_private {
            bing: string;
        }
    }
    